@@ -1,5 +1,8 @@
 2015-10-06  Carl Hetherington  <cth@carlh.net>
 
+	* Fix invalid SMPTE subtitle output
+	in some cases.
+
 	* Speculative support for multi-part
 	bitmap subtitles (#709).
 
